--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 </div>
                 <div class="slider-item-content">
                     <h2>Pengajuan Penyampaian Proposal Kegiatan Tenaga Kerja Mandiri Sudah Di Buka</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, doloremque. Ratione optio quasi velit nobis illum similique esse modi, cumque qui eveniet odit architecto veritatis possimus molestias fugit! Iusto, enim.</p>
-                    <button class="btn btn-utama"> Masukkan Proposal</button>
+                    <p>untuk mempercepat dan memudahkan proses dari setiap tahapan kegiatan ini akan dilakukan secara digital menggunakan formulir online, klik link di bawah ini...</p>
+                    <a href="https://bit.ly/32MvTmx" target="_blank" class="btn btn-utama">Masukkan Proposal</a>
                 </div>
             </div>
             <div class="slider-item">
@@ -123,9 +123,9 @@
                     <img src="assets/img/nakertranskalsel.jpg" alt="">
                 </div>
                 <div class="slider-item-content">
-                    <h2>Pengajuan Penyampaian Proposal Kegiatan Tenaga Kerja Mandiri Sudah Di Buka</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, doloremque. Ratione optio quasi velit nobis illum similique esse modi, cumque qui eveniet odit architecto veritatis possimus molestias fugit! Iusto, enim.</p>
-                    <button class="btn btn-utama"> Masukkan Proposal</button>
+                    <h2>Sistematika Proposal Kegiatan</h2>
+                    <p>Agar proposal yang akan diajukan memiliki keseragaman dan sesuai dengan petunjuk teknis, maka sebaiknya menggunakan sistematika sebagai berikut, info terkait silahkan klik link di bawah ini..</p>
+                    <a href="sistematika.html" target="_blank" class="btn btn-utama">Sistematika Proposal</a>
                 </div>
             </div>
         </div>
@@ -163,7 +163,13 @@
                         <div class="section-item-tittle">
                             <h3 id="lat-belakang">Latar Belakang Program</h3>
                             <div class="section-item-body">
-                                <p>Upaya Pemerintah Provinsi Kalimantan Selatan dalam rangka mengurangi angka pengangguran dan penciptaan usaha salah satunya adalah melalui Program Kegiatan Tenaga Kerja Mandiri (TKM).</p>
+                                <p>Upaya Pemerintah Provinsi Kalimantan Selatan dalam rangka mengurangi angka pengangguran dan penciptaan usaha salah satunya adalah melalui Program Kegiatan Tenaga Kerja Mandiri (TKM).</br>Program ini adalah suatu program
+                                    kegiatan pengembangan dan perluasan kerja yang dilakukan kepada masyarakat yang telah memiliki embrio usaha secara berkelompok, berupa kegiatan sosialisasi, pembekalan kepada peserta, Praktek dan Pemberian Bantuan Sarana
+                                    Usaha.
+                                    </br>Khusus untuk pemberian bantuan sarana usaha dan usulan pelatihan agar sasarannya tepat terhadap kelompok yang membutuhkan maka diperlukan proposal kegiatan dari kelompok kerja sesuai dengan ketentuan, untuk mempercepat
+                                    dan mempermudah menghimpun data yang akan digunakan sebagai bahan analisa dalam mengkaji kepatutan dan pertimbangan anggaran melatarbelakangi penggunaan SISTEM INFORMASI PENYAMPAIAN PROPOSAL KEGIATAN TENAGA KERJA MANDIRI
+                                    BERBASIS DIGITAL.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -178,7 +184,7 @@
                         <div class="section-item-tittle">
                             <h3 id="tujuan">Tujuan Program</h3>
                             <div class="section-item-body">
-                                <p>Upaya Pemerintah Provinsi Kalimantan Selatan dalam rangka mengurangi angka pengangguran dan penciptaan usaha salah satunya adalah melalui Program Kegiatan Tenaga Kerja Mandiri (TKM).
+                                <p>Mengoptimalisasikan Pelayanan terhadap pengajuan proposal yang tertib, efektif dan efisien dengan menggunakan SISTEM INFORMASI PENYAMPAIAN PROPOSAL KEGIATAN TENAGA KERJA MANDIRI BERBASIS DIGITAL.
                                 </p>
                             </div>
                         </div>
@@ -192,9 +198,18 @@
                     </div>
                     <div class="col-md-6">
                         <div class="section-item-tittle">
-                            <h3 id="kriteria">Kriteria Penerima</h3>
+                            <h3 id="kriteria">Kriteria Penerima / Pelaksana Program</h3>
                             <div class="section-item-body">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, beatae voluptatem sed sint similique incidunt alias quidem aut assumenda dicta iure perferendis quaerat sapiente a nesciunt. Quaerat vitae obcaecati alias.</p>
+                                <ul>
+                                    <li>Lembaga Masyarakat yang bergerak dibidang pemberdayaan masyarakat/pembinaan sumber daya manusia.</li>
+                                    <li>Memiliki Visi dan Misi dalam pemberdayaan masyarakat.</li>
+                                    <li>Berbadan hukum (memiliki akta pendirian lembaga).</li>
+                                    <li>Bukan milik perseorangan.</li>
+                                    <li>Memiliki Struktur Organisasi yang representatif.</li>
+                                    <li>Memiliki Personil yang berpengalaman dalam bidang pemberdayaan masyarakat.</li>
+                                    <li>Memiliki program yang jelas dan berorientasi pada upaya memandirikan masyarakat.</li>
+                                    <li>Memiliki kantor yang jelas, memiliki NPWP serta mempunyai sarana & prasarana yang layak.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -209,7 +224,14 @@
                         <div class="section-item-tittle">
                             <h3 id="jadwal">Jadwal atau Tahapan Program</h3>
                             <div class="section-item-body">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, beatae voluptatem sed sint similique incidunt alias quidem aut assumenda dicta iure perferendis quaerat sapiente a nesciunt. Quaerat vitae obcaecati alias.</p>
+                                <ul>
+                                    <li>Pengumaman Usulan Proposal.</li>
+                                    <li>Upload Data Proposal.</li>
+                                    <li>Verifikasi Berkas.</li>
+                                    <li>Peninjauan ke Lapangan.</li>
+                                    <li>Pengumuman penerima bantuan.</li>
+
+                                </ul>
                             </div>
                         </div>
                     </div>
